<resources>
    <string name="app_name">Gym Nation</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="diet_routines">Diet Routines</string>
    <string name="description">description</string>
    <string name="performance">Performance</string>
    <string name="exercises">Exercises</string>
    <string name="diet_guide">Diet Guide</string>
    <string name="gallery">Gallery</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="settings">Settings</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="login">Login</string>
    <string name="memberships">Memberships</string>
    <string name="logout">Logout</string>
    <string name="contact_us">Contact Us</string>
    <string name="home">Home</string>
    <string name="get_code">Get Code</string>
    <string name="diet_rules">The given Diet Formats are based for an average Indian person; Considering a weight = 70 Kg and height = 5\'8\".\nYou may need to modify your macro-nutrients according to your BMI.</string>
    <string name="exercise_rules">The given Exercise Routines are based on a Beginner to Intermediate level; Considering a weight = 70 Kg and height = 5\'8\".\nYou may need to modify your weights according to your capacity.</string>
    <string name="exercise_routines">Exercise Routines</string>
    <string name="help_us_know_you_better">Help Us Know You Better</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="enter_name">Enter Name *</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save_now">Save Now</string>
    <string name="enter_age">Enter Age *</string>
    <string name="enter_your_weight">Weight *</string>
    <string name="edit_details">Edit Details</string>
    <string name="launch_camera_on_start">Launch Camera on Start</string>
    <string name="developers">Developers</string>
    <string name="rate_us">Rate Us</string>
    <string name="suggestions">Suggestions</string>
    <string name="share_app">Share App</string>
    <string name="receive_notifications">Receive Notifications</string>
    <string name="marked_successfully">Marked\nSuccessfully !</string>
    <string name="this_may_take_a_few_time_to_get_updated">This may take a few time to get updated</string>
    <string name="proteins">Proteins</string>
    <string name="fats">Fats</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="remember_your_macros">Remember Your Macros</string>
    <string name="macro_division">Below is the division of Macro - Nutrients (macros) based on your Height and weight; off course along with Plenty of Water !!</string>
    <string name="height">Height (cm) *</string>
    <string name="dark_mode_enabled">Dark Mode</string>
    <string name="clear_data_on_logout">Clear Data on Logout</string>
    <string name="my_details">My Details</string>
</resources>
